--- a/angular.json
+++ b/angular.json
@@ -30,11 +30,12 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/datatables.net-dt/css/jquery.dataTables.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
-              "node_modules/datatables.net/js/jquery.dataTables.js",
+              "node_modules/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
