--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "@fortawesome/angular-fontawesome": "^0.7.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "bootstrap": "^4.5.3",
     "bootstrap-datepicker": "^1.9.0",
     "datatables.net": "^1.10.22",
     "datatables.net-dt": "^1.10.22",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
-    "rxjs": "~6.6.0",
+    "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
