--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.1.5",
+    "@angular/animations": "^10.1.6",
+    "@angular/cdk": "^10.2.6",
     "@angular/common": "~10.1.5",
     "@angular/compiler": "~10.1.5",
     "@angular/core": "~10.1.5",
     "@angular/forms": "~10.1.5",
+    "@angular/material": "^10.2.6",
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
@@ -28,8 +30,10 @@
     "bootstrap-datepicker": "^1.9.0",
     "datatables.net": "^1.10.22",
     "datatables.net-dt": "^1.10.22",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
+    "ngx-bootstrap": "^6.1.0",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
